--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,29 @@
   clip-path: polygon(0% 90%, 100% 0%, 100% 50%, 100% 100%);
 }
 
+
+@media (max-width: 440px) {
+
+  .tudo {
+    background-color: bisque;
+    position: relative;
+    height: 250rem;
+    z-index: 1;
+  }     
+  
+  .imgg {
+    position: sticky;
+    top: 0px;
+    width: 100%;
+    height: 43rem;
+  }
+
+  .rgbb{
+    position: relative;
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,33,66,1) 62%);
+    height: 3rem;
+    clip-path: polygon(0% 90%, 100% 0%, 100% 50%, 0% 100%);
+  }
+}
+
+
