--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -34,3 +34,35 @@
     width: 300px;   
     height: 300px;
 } */
+
+@media (max-width: 440px) {
+    .sectionn {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 57rem;
+    }
+
+    .container {
+        /* background-color: blueviolet; */
+        height: 30rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-between;
+        position: absolute;
+    }
+
+    .img2 {
+    width: 250px;   
+    height: 250px;
+    }
+
+    .container h1 {
+        font-size: 2rem;
+        color: var(--gray-300);
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    }
+}
