--- a/src/components/Tokenomics.module.css
+++ b/src/components/Tokenomics.module.css
@@ -52,3 +52,53 @@
     font-size: 2.5rem;
 }
 
+
+
+@media (max-width: 440px) {
+   .div {
+      /* margin: 10rem; */
+      position: relative;
+      background-color: transparent;
+      height: 67rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+
+   .div img {
+      position: relative;
+      width: 300px;
+      height: 300px;
+   }
+
+   .div h2 {
+      border-radius: 10px;
+      font-size: 30px;
+      box-shadow: -5px -5px 10px;
+   }
+
+   .div h1 {
+      margin-top: 1rem;
+      font-size: 20px;
+   }
+
+   .div p {
+      width: 20rem;
+      text-align: center; 
+      margin-top: 4rem;
+      font-size: 20px;
+   }
+
+   .tokenon p{
+      box-shadow: -5px -5px 10px;
+      border-radius: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 5rem;
+      height: 5rem;
+      font-size: 0.7rem;
+  }
+  
+  
+ }
