--- a/src/components/Section2.module.css
+++ b/src/components/Section2.module.css
@@ -124,14 +124,14 @@
 @media (max-width: 440px) {
 
   .section2 {
-    background-color: #00ffd5;
+    /* background-color: #00ffd5; */
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 30rem;
-    top: 0px;
+    height: 40rem;
+    top: 0;
   }
 
   .divi img {
