--- a/src/components/Section2.module.css
+++ b/src/components/Section2.module.css
@@ -130,11 +130,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 40rem;
+    height: 80rem;
     top: 0;
   }
 
   .divi img {
+    position: relative;
     width: 80px;
     height: 200px;
   }
