--- a/src/App.module.css
+++ b/src/App.module.css
@@ -51,14 +51,14 @@
     /* background-color: bisque; */
     position: relative;
     height: 250rem;
-    z-index: 1;
+    /* z-index: 1; */
   }     
   
   .tudo img {
-    /* position: relative; */
+    position: relative;
     top: 0px;
     width: 100%;
-    height: 80rem;
+    height: 40rem;
   }
 
   .rgbb{
@@ -66,6 +66,13 @@
     height: 3rem;
     clip-path: polygon(0% 90%, 100% 0%, 100% 50%, 0% 100%);
   }
+
+  .teste {
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,33,66,1) 62%);
+    height: 3rem;
+    clip-path: polygon(0% 90%, 100% 0%, 100% 50%, 100% 100%);
+  }
+  
 }
 
 
