--- a/src/App.module.css
+++ b/src/App.module.css
@@ -52,7 +52,10 @@
     position: relative;
     height: 250rem;
     /* z-index: 1; */
-  }     
+  }   
+  .imgg {
+    display: none;
+  }  
   
   .tudo img {
     position: relative;
@@ -72,6 +75,15 @@
     height: 3rem;
     clip-path: polygon(0% 90%, 100% 0%, 100% 50%, 100% 100%);
   }
+
+  .rgb{
+    position: relative;
+    top: -8px;
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,33,66,1) 62%);
+    height: 4rem;
+    clip-path: polygon(0% 10%, 100% 0%, 100% 50%, 100% 100%);
+  }
+  
   
 }
 
