--- a/src/components/Roadmap.module.css
+++ b/src/components/Roadmap.module.css
@@ -103,7 +103,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 4rem;
         margin-top: 30rem;
      }
 
@@ -113,6 +113,7 @@
         padding: 15px;
         box-shadow: rgb(114, 114, 114) 0px 0px 10px 5px inset;
         /* background-color: rgb(114, 114, 114); */
+        gap: 20px;
     }
   }
   
