--- a/src/components/Tokenomics.module.css
+++ b/src/components/Tokenomics.module.css
@@ -10,11 +10,12 @@
 
  .div img {
     position: relative;
-    width: 600px;
-    height: 600px;
+    width: 300px;
+    height: 300px;
  }
 
  .div h2 {
+   margin-top: 3rem;
     border-radius: 10px;
     font-size: 60px;
     box-shadow: -5px -5px 10px;
