--- a/src/global.css
+++ b/src/global.css
@@ -26,7 +26,7 @@
 
 body, html {
     background:black;
-    color: var(--gray-300);
+    color: var(--red);
     /* overflow-x: hidden; */
     -webkit-font-smoothing: antialiased;
 }
