--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -10,8 +10,8 @@
 }
 
 .sectionn img {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
@@ -29,11 +29,14 @@
     color: var(--gray-300);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
-/* 
-.container img {
-    width: 300px;   
-    height: 300px;
-} */
+
+.img2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 400px;   
+    height: 400px;
+} 
 
 @media (max-width: 440px) {
     .sectionn {
