--- a/src/components/Section1.module.css
+++ b/src/components/Section1.module.css
@@ -26,7 +26,6 @@
 
 .container h1 {
     font-size: 8rem;
-    color: var(--gray-300);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
@@ -59,9 +58,12 @@
     }
 
     .img2 {
-    width: 50px;   
-    height: 50px;
-    }
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 400px;   
+        height: 400px;
+    } 
 
     .container h1 {
         font-size: 2rem;
